Added controller with showing and adding products

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -5,4 +5,9 @@
 products:
   path: /products
   controller: App\Controller\ProductsController::show
-  methods: GET|PUT
+  methods: GET
+
+products_add:
+  path: /products
+  controller: App\Controller\ProductsController::add
+  methods: POST
