--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,3 +1,11 @@
+# Allow CORS
+Header always set Access-Control-Allow-Origin *
+Header always set Access-Control-Allow-Methods "GET, POST, OPTIONS"
+Header always set Access-Control-Allow-Credentials true
+Header always set Access-Control-Allow-Headers "accept, content-type"
+RewriteCond %{REQUEST_METHOD} OPTIONS
+RewriteRule ^(.*)$ $1 [R=200,L]
+
 # Use the front controller as index file. It serves as a fallback solution when
 # every other rewrite/redirect fails (e.g. in an aliased environment without
 # mod_rewrite). Additionally, this reduces the matching process for the
